--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Lucas Vinício</title>
+  </head>
+  <body>
+    <center><n>Dados Gerais</n></center>
+    <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t1.0-9/15253618_612267995648616_5934497721111599585_n.jpg?oh=53e9b1bded5bb8ef3f50da96a3eab0ed&oe=59441386">
+    <ul>
+      <li>Nome</li>
+      <li>Idade<
+  
+  </body>
+</html>
