--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   </head>
   <body>
     <center><n>Dados Gerais</n></center>
-    <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t1.0-9/15253618_612267995648616_5934497721111599585_n.jpg?oh=53e9b1bded5bb8ef3f50da96a3eab0ed&oe=59441386">
+    <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t31.0-8/16403446_639713776237371_2766323017649094591_o.jpg?oh=f8dccc9e8b82925a3196818bb2bfcea7&oe=59308967" width="304" height="228">
     <ul>
       <li>Nome</li>
-      <li>Idade<
-  
+      <li>Idade</li>
+    </ul>
   </body>
 </html>
