--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <title>Lucas Vinício</title>
   </head>
   <body>
-    <center><n>Dados Gerais</n></center>
+    <n><h1>Dados Gerais</h1></n>
     <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t31.0-8/16403446_639713776237371_2766323017649094591_o.jpg?oh=f8dccc9e8b82925a3196818bb2bfcea7&oe=59308967" width="304" height="228">
     <ul>
       <li>Nome</li>
       <li>Idade</li>
+      <li>Nascido em</li>
+      <li>Redes sociais</li>
     </ul>
   </body>
 </html>
