--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   </head>
   <body>
     <n><h1>Dados Gerais</h1></n>
-    <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t31.0-8/16403446_639713776237371_2766323017649094591_o.jpg?oh=f8dccc9e8b82925a3196818bb2bfcea7&oe=59308967" width="304" height="228">
+    <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t31.0-8/16403446_639713776237371_2766323017649094591_o.jpg?oh=f8dccc9e8b82925a3196818bb2bfcea7&oe=59308967" width="250" height="190">
     <ul>
-      <li>Nome</li>
-      <li>Idade</li>
-      <li>Nascido em</li>
+      <li>Nome: Lucas Vinício Alves Almeida</li>
+      <li>Idade: 14</li>
+      <li>Nascido em: Lisboa-PT</li>
       <li>Redes sociais</li>
     </ul>
   </body>
