--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <body>
     <n><h1>Dados Gerais</h1></n>
     <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t31.0-8/16403446_639713776237371_2766323017649094591_o.jpg?oh=f8dccc9e8b82925a3196818bb2bfcea7&oe=59308967" width="250" height="190">
+    <p><n>Nome:</n> Lucas Vinício Alves Almeida</p>
+    <p><n>Idade:</n> 14</p>
+    <p><n>Nascido em:</n> Lisboa-PT</p>
+    <p><n>Redes sociais:</n></p><br>
     <ul>
-      <li>Nome: Lucas Vinício Alves Almeida</li>
-      <li>Idade: 14</li>
-      <li>Nascido em: Lisboa-PT</li>
-      <li>Redes sociais</li>
+      <li><a href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593">Facebook</a></li>
+      <li><a href="https://www.instagram.com/lucas_portugal0906/?hl=pt-br">Instagram</a></li>
     </ul>
   </body>
 </html>
