--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
     <p><n>Nome:</n> Lucas Vinício Alves Almeida</p>
     <p><n>Idade:</n> 14</p>
     <p><n>Nascido em:</n> Lisboa-PT</p>
-    <p><n>Redes sociais:</n></p><br>
-    <ul>
+      <p><n>Redes sociais:</n></p><br>
+    <ol>
       <li><a href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593">Facebook</a></li>
       <li><a href="https://www.instagram.com/lucas_portugal0906/?hl=pt-br">Instagram</a></li>
-    </ul>
+    </ol>
+    <n><h1>Informações Pessoais</h1></n>
+    <p>Hobbies</p>
+    <ol>
+      <li>Tocar violino</li>
+      <li>Jogar futebol</li>
+      <li>Comer :D</li>
+      <li>Dormir ;)</li>
+    </ol>   
   </body>
 </html>
