--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Lucas Vinício</title>
   </head>
   <body>
-    <n><h1>Dados Gerais</h1></n>
+    <center><n><h1>Dados Gerais</h1></n>
     <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t31.0-8/16403446_639713776237371_2766323017649094591_o.jpg?oh=f8dccc9e8b82925a3196818bb2bfcea7&oe=59308967" width="200" height="140">
     <p><n>Nome:</n> Lucas Vinício Alves Almeida</p>
     <p><n>Idade:</n> 14</p>
@@ -21,6 +21,6 @@
       <li>Jogar futebol</li>
       <li>Comer :D</li>
       <li>Dormir ;)</li>
-    </ol>   
+      </ol></center>   
   </body>
 </html>
