--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Lucas Vinício</title>
   </head>
-  <body background="http://www.oficinadopapel.com.br/image/cache/data/produtos/todos/listras-verde-claro-500x500.jpg">
+  <body background="https://image.freepik.com/vetores-gratis/fundo-azul-escuro-com-listras-coloridas-diagonal-linhas-de-fundo_1017-5160.jpg">
     <center><n><h1>Dados Gerais</h1></n>
     <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t31.0-8/16403446_639713776237371_2766323017649094591_o.jpg?oh=f8dccc9e8b82925a3196818bb2bfcea7&oe=59308967" width="200" height="140">
     <p><n>Nome:</n> Lucas Vinício Alves Almeida</p>
