--- a/index.html
+++ b/index.html
@@ -4,24 +4,21 @@
     <title>Lucas Vinício</title>
   </head>
   <body background="https://image.freepik.com/vetores-gratis/fundo-azul-escuro-com-listras-coloridas-diagonal-linhas-de-fundo_1017-5160.jpg">
-    <center><n><h1>Dados Gerais</h1></n>
+    <center><b><h1>Dados Gerais</1></n>
     <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t31.0-8/16403446_639713776237371_2766323017649094591_o.jpg?oh=f8dccc9e8b82925a3196818bb2bfcea7&oe=59308967" width="200" height="140">
-    <p><n>Nome:</n> Lucas Vinício Alves Almeida</p>
-    <p><n>Idade:</n> 14</p>
-    <p><n>Nascido em:</n> Lisboa-PT</p>
-      <p><n>Redes sociais:</n></p><br>
+    <p style="color:white"><b>Nome:</b> Lucas Vinício Alves Almeida</p>
+    <p style="color:white"><b>Idade:</b> 14</p>
+    <p style="color:white"><b>Nascido em:</b> Lisboa-PT</p>
+      <p style="color:white"><b>Redes sociais:</b></p>
       <br>
       <a href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593">Facebook</a>
       <a href="https://www.instagram.com/lucas_portugal0906/?hl=pt-br">Instagram</a>
     <n><h1>Informações Pessoais</h1></n>
-      <br>
-    <p>Hobbies:</p>
-      <br>
-      <p>Tocar violino</p>
-      <p>Jogar futebol</p>
-      <p>Comer :D</p>
-      <p>Dormir ;)</p>  
-      <br>
-      <p>O que quero aprender:</p></center>
+      <p style="color:white"><b>Hobbies:</b></p>
+      <p style="color:white">Tocar violino</p>
+      <p style="color:white">Jogar futebol</p>
+      <p style="color:white">Comer :D</p>
+      <p style="color:white">Dormir ;)</p>  
+    <p style="color:white"><b>O que quero aprender:</b></p></center>
   </body>
 </html>
