--- a/index.html
+++ b/index.html
@@ -3,22 +3,31 @@
   <head>
     <title>Lucas Vinício</title>
   </head>
-  <body background="https://image.freepik.com/vetores-gratis/fundo-azul-escuro-com-listras-coloridas-diagonal-linhas-de-fundo_1017-5160.jpg">
-    <center><b><h1>Dados Gerais</1></n>
+  <body background="http://1.bp.blogspot.com/--MjbG-TLmEE/VWLpZabiS9I/AAAAAAAAKYw/sZinyZRBnyY/s1600/Montando%2Bminha%2Bfesta%2B00.jpg">
+    <center><b><h1>Dados Gerais</h1></b>
     <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t31.0-8/16403446_639713776237371_2766323017649094591_o.jpg?oh=f8dccc9e8b82925a3196818bb2bfcea7&oe=59308967" width="200" height="140">
-    <p style="color:white"><b>Nome:</b> Lucas Vinício Alves Almeida</p>
-    <p style="color:white"><b>Idade:</b> 14</p>
-    <p style="color:white"><b>Nascido em:</b> Lisboa-PT</p>
-      <p style="color:white"><b>Redes sociais:</b></p>
-      <br>
-      <a href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593">Facebook</a>
-      <a href="https://www.instagram.com/lucas_portugal0906/?hl=pt-br">Instagram</a>
+    <p><b>Nome:</b> Lucas Vinício Alves Almeida</p>
+    <p><b>Idade:</b> 14</p>
+    <p><b>Nascido em:</b> Lisboa-PT</p>
+      <p><b>Redes sociais:</b></p>
+      <ul>
+        <li><a href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593">Facebook</a></li>
+        <li><a href="https://www.instagram.com/lucas_portugal0906/?hl=pt-br">Instagram</a></li>
+        <p><i>"Tentar sempre, conseguir as vezes, desistir jamais" (Lucas Vinício)</i></p>
+      </ul>
     <n><h1>Informações Pessoais</h1></n>
-      <p style="color:white"><b>Hobbies:</b></p>
-      <p style="color:white">Tocar violino</p>
-      <p style="color:white">Jogar futebol</p>
-      <p style="color:white">Comer :D</p>
-      <p style="color:white">Dormir ;)</p>  
-    <p style="color:white"><b>O que quero aprender:</b></p></center>
+      <p><b>Hobbies:</b></p>
+      <ul>
+        <li>Tocar violino</li>
+        <li>Jogar futebol</li>
+        <li>Comer :D</li>
+        <li>Dormir ;)</li>
+      </ul>
+      <p><b>O que quero aprender:</b></p>
+      <ul>
+        <li>Programar</li>
+        <li>Surfar</li>
+      </ul>
+    </center>
   </body>
 </html>
