--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <title>Lucas Vinício</title>
   </head>
-  <body background="http://1.bp.blogspot.com/--MjbG-TLmEE/VWLpZabiS9I/AAAAAAAAKYw/sZinyZRBnyY/s1600/Montando%2Bminha%2Bfesta%2B00.jpg">
-    <center><b><h1>Dados Gerais</h1></b>
+  <body background="http://www.clickgratis.com.br/fotos-imagens/fundo/aHR0cDovL2RhbmllbGNvcmlvbGFuby5jb20uYnIvd3AtY29udGVudC91cGxvYWRzLzIwMTUvMDQvZnVuZG8tYXp1bC5qcGc=.jpg">
+    <b><h1>Dados Gerais</h1></b>
     <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t31.0-8/16403446_639713776237371_2766323017649094591_o.jpg?oh=f8dccc9e8b82925a3196818bb2bfcea7&oe=59308967" width="200" height="140">
     <p><b>Nome:</b> Lucas Vinício Alves Almeida</p>
     <p><b>Idade:</b> 14</p>
     <p><b>Nascido em:</b> Lisboa-PT</p>
-      <p><b>Redes sociais:</b></p>
+    <p><b>Redes sociais:</b></p>
       <ul>
         <li><a href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593">Facebook</a></li>
         <li><a href="https://www.instagram.com/lucas_portugal0906/?hl=pt-br">Instagram</a></li>
         <p><i>"Tentar sempre, conseguir as vezes, desistir jamais" (Lucas Vinício)</i></p>
       </ul>
-    <n><h1>Informações Pessoais</h1></n>
+    <b><h1>Informações Pessoais</h1></b>
       <p><b>Hobbies:</b></p>
       <ul>
         <li>Tocar violino</li>
@@ -28,6 +28,5 @@
         <li>Programar</li>
         <li>Surfar</li>
       </ul>
-    </center>
   </body>
 </html>
