--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
         <li><a href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593">Facebook</a></li>
         <li><a href="https://www.instagram.com/lucas_portugal0906/?hl=pt-br">Instagram</a></li>
       </ul>
-    <p><b><i>"Tentar sempre, conseguir as vezes, desistir jamais" (Lucas Vinício)</i></b></p>
+    <p><i>"Tentar sempre, conseguir as vezes, desistir jamais" (Lucas Vinício)</i></p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/oGAGC4irCVk?showinfo=0?ecver=1" frameborder="0" allowfullscreen></iframe>
     <b><h1>Informações Pessoais</h1></b>
       <p><b>Hobbies:</b></p>
       <ul>
         <li>Tocar violino</li>
         <li>Jogar futebol</li>
+        <li>Assistir séries e filmes</li>
+        <li>Viajar</li>
         <li>Comer :D</li>
-        <li>Dormir ;)</li>
       </ul>
       <p><b>O que quero aprender:</b></p>
       <ul>
         <li>Programar</li>
+        <li>Desenhar</li>
         <li>Surfar</li>
       </ul>
   </body>
