--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Lucas Vinício</title>
+    <style>
+      p {color: orange;
+      }
+    </style>
   </head>
   <body background="http://www.clickgratis.com.br/fotos-imagens/fundo/aHR0cDovL2RhbmllbGNvcmlvbGFuby5jb20uYnIvd3AtY29udGVudC91cGxvYWRzLzIwMTUvMDQvZnVuZG8tYXp1bC5qcGc=.jpg">
     <b><h1>Dados Gerais</h1></b>
