--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       }
     </style>
   </head>
-  <body background="http://www.clickgratis.com.br/fotos-imagens/fundo/aHR0cDovL2RhbmllbGNvcmlvbGFuby5jb20uYnIvd3AtY29udGVudC91cGxvYWRzLzIwMTUvMDQvZnVuZG8tYXp1bC5qcGc=.jpg">
-    <b><h1>Dados Gerais</h1></b>
+  <body bgcolor="black">
+    <h1><b>Dados Gerais</b></h1>
     <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t31.0-8/16403446_639713776237371_2766323017649094591_o.jpg?oh=f8dccc9e8b82925a3196818bb2bfcea7&oe=59308967" width="200" height="140">
     <p><b>Nome:</b> Lucas Vinício Alves Almeida</p>
     <p><b>Idade:</b> 14</p>
@@ -20,7 +20,8 @@
       </ul>
     <p><i>"Tentar sempre, conseguir as vezes, desistir jamais" (Lucas Vinício)</i></p>
        <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/PT2_F-1esPk?showinfo=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
-      <p><b>Hobbies:</b></p>
+    <h1><b>Informações Pessoais</b></h1>
+    <p><b>Hobbies:</b></p>
       <ul>
         <li>Tocar violino</li>
         <li>Jogar futebol</li>
