--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <title>Lucas Vinício</title>
     <style>
-      p {color: orange;
+      h1 {
+        font-family:"impact, fantasy";
+        color:"#A0522D";
+        text-align:"center"
       }
     </style>
   </head>
-  <body bgcolor="black">
+  <body background="http://www.lucaslenci.com/imagens_upload/3FUNDO_site.jpg">
     <h1><b>Dados Gerais</b></h1>
-    <img src="https://scontent.fbsb9-1.fna.fbcdn.net/v/t31.0-8/16403446_639713776237371_2766323017649094591_o.jpg?oh=f8dccc9e8b82925a3196818bb2bfcea7&oe=59308967" width="200" height="140">
+    <center><img src="https://scontent.fvix1-1.fna.fbcdn.net/v/t1.0-9/15253618_612267995648616_5934497721111599585_n.jpg?oh=6d313dcf0d536733e0ab9caf8e230309&oe=596BA086" width="200" height="550"></center>
     <p><b>Nome:</b> Lucas Vinício Alves Almeida</p>
     <p><b>Idade:</b> 14</p>
     <p><b>Nascido em:</b> Lisboa-PT</p>
