--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <title>Lucas Vinício</title>
     <style>
       h1 {
-        font-family:"impact, fantasy";
-        color:"#A0522D";
-        text-align:"center"
+        font-family:"verdana";
+        color:#800000;
+        text-align:center
+      }
+      h3 {
+        font-family:"helvetica";
+        color:#A52A2A;
+        text-align:;
+      }
+      p {
+        font-family:"helvetica";
+        color:#A52A2A;
+        text-align:;
       }
     </style>
   </head>
@@ -14,28 +24,33 @@
     <h1><b>Dados Gerais</b></h1>
     <br>
     <br>
-    <center><img src="https://scontent.fvix1-1.fna.fbcdn.net/v/t1.0-9/15253618_612267995648616_5934497721111599585_n.jpg?oh=6d313dcf0d536733e0ab9caf8e230309&oe=596BA086" width="350" height="550"></center>
+    <center><img src="https://scontent.fvix1-1.fna.fbcdn.net/v/t1.0-9/15253618_612267995648616_5934497721111599585_n.jpg?oh=6d313dcf0d536733e0ab9caf8e230309&oe=596BA086" width="300" height="400"></center>
+    <br>
+    <br>
     <p><b>Nome:</b> Lucas Vinício Alves Almeida</p>
     <p><b>Idade:</b> 14</p>
-    <p><b>Nascido em:</b> Lisboa-PT</p>
+    <p><b>Nascido em:</b> Lisboa-Portugal<img src="http://img.freeflagicons.com/thumb/fluttering_flag/portugal/portugal_640.png" width='33' height='23' alt=portugal title="Portugal"/></p>
     <p><b>Redes sociais:</b></p>
       <ul>
-        <li><a href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593">Facebook</a></li>
-        <li><a href="https://www.instagram.com/lucas_portugal0906/?hl=pt-br">Instagram</a></li>
+        <a href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593" target="_blank"><img src="http://www.clickgratis.com.br/fotos-imagens/facebook/aHR0cDovL3d3dy5jbGlja2dyYXRpcy5jb20uYnIvZm90b3MtaW1hZ2Vucy9mYWNlYm9vay9hSFIwY0RvdkwyTmxiblJsY214NWJtVXVZMjl0TDNkd0xXTnZiblJsYm5RdmRYQnNiMkZrY3k4eU1ERTJMekEzTDJ4dloyOHRabUZqWldKdmIyc3VjRzVuLmpwZw==.jpg" width='54' height='54' alt=facebook title="Facebook"/></a>
+        <a href="https://www.instagram.com/lucas_portugal0906/?hl=pt-br" target="_blank"><img src="https://lh3.googleusercontent.com/aYbdIM1abwyVSUZLDKoE0CDZGRhlkpsaPOg9tNnBktUQYsXflwknnOn2Ge1Yr7rImGk=w300" width='50' height='48' alt=instagram title="Instagram"/></a>
       </ul>
-    <p><i>"Tentar sempre, conseguir as vezes, desistir jamais" (Lucas Vinício)</i></p>
-       <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/PT2_F-1esPk?showinfo=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
+    <marquee style="font-family: helvetica;" slide direction="left"><span style="color:#A52A2A"><i>Tentar sempre, conseguir às vezes, desistir jamais (Lucas Vinício)</i></span></marquee> 
+ <ul>
+       <center><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/PT2_F-1esPk?showinfo=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div></center>
+       <br>
+       <br>
     <h1><b>Informações Pessoais</b></h1>
-    <p><b>Hobbies:</b></p>
-      <ul>
+    <br>
+    <h3><b>Hobbies:</b></h3>
+      <ul style="color:#A52A2A; font-family:helvetica">
         <li>Tocar violino</li>
-        <li>Jogar futebol</li>
+        <li>Jogar futebol e outros esportes <img src="https://img.clipartfest.com/7a21157a9cf2029ad48a387e7df8ac9a_free-glossy-soccer-ball-clip-clipart-bola-de-futebol_640-628.png" width='20' height='20' title="Futebol"/></li>
         <li>Assistir séries e filmes</li>
         <li>Viajar</li>
-        <li>Comer :D</li>
       </ul>
-      <p><b>O que quero aprender:</b></p>
-      <ul>
+      <h3><b>O que quero aprender:</b></h3>
+      <ul style="color:#A52A2A; font-family:helvetica">
         <li>Programar</li>
         <li>Desenhar</li>
         <li>Surfar</li>
