--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         color:#A52A2A;
         text-align:;
       }
+      body {
+        margin-left:10%;
+        margin-right:10%;
+      }
     </style>
   </head>
   <body background="http://www.lucaslenci.com/imagens_upload/3FUNDO_site.jpg">
