--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593" target="_blank"><img src="http://www.clickgratis.com.br/fotos-imagens/facebook/aHR0cDovL3d3dy5jbGlja2dyYXRpcy5jb20uYnIvZm90b3MtaW1hZ2Vucy9mYWNlYm9vay9hSFIwY0RvdkwyTmxiblJsY214NWJtVXVZMjl0TDNkd0xXTnZiblJsYm5RdmRYQnNiMkZrY3k4eU1ERTJMekEzTDJ4dloyOHRabUZqWldKdmIyc3VjRzVuLmpwZw==.jpg" width='54' height='54' alt=facebook title="Facebook"/></a>
         <a href="https://www.instagram.com/lucas_portugal0906/?hl=pt-br" target="_blank"><img src="https://lh3.googleusercontent.com/aYbdIM1abwyVSUZLDKoE0CDZGRhlkpsaPOg9tNnBktUQYsXflwknnOn2Ge1Yr7rImGk=w300" width='50' height='48' alt=instagram title="Instagram"/></a>
     <br>
-    <marquee style="font-family: helvetica;" slide direction="left"><span style="color:#A52A2A"><i>Tentar sempre, conseguir às vezes, desistir jamais (Lucas Vinício)</i></span></marquee> 
+    <marquee style="font-family: helvetica;" slide direction="left"><span style="color:#A52A2A"><i>"Tentar sempre, conseguir às vezes, desistir jamais" (Lucas Vinício)</i></span></marquee> 
     <br>   
     <center><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/PT2_F-1esPk?showinfo=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div></center>
        <br>
