--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href='http://icon-icons.com/icons2/300/PNG/256/person-icon_31846.png' rel='icon' type='image/x-icon'/>
     <title>Lucas Vinício</title>
     <style>
       h1 {
@@ -25,7 +26,6 @@
     </style>
   </head>
   <body background="http://www.lucaslenci.com/imagens_upload/3FUNDO_site.jpg">
-    <br>
     <br>
     <h1><b>Dados Gerais</b></h1>
     <br>
