--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       h1 {
         font-family:"verdana";
         color:#800000;
-        text-align:center
+        padding:10px;
       }
       h3 {
         font-family:"helvetica";
@@ -18,33 +18,44 @@
         font-family:"helvetica";
         color:#A52A2A;
         text-align:;
+        padding: 10px;
       }
       body {
-        margin-left:5%;
-        margin-right:5%;
+        border: 5px solid #600000;
       }
+      header {
+        background-color:#600000;
+        text-align:center;
+        padding: 1cm;
+        font-family:"helvetica";
+        }
     </style>
   </head>
   <body background="http://www.lucaslenci.com/imagens_upload/3FUNDO_site.jpg">
+  <header><h1 style="color:#FFFFFF">Meu Site</h1></header>
+  <article>
     <br>
     <h1><b>Dados Gerais</b></h1>
-    <br>
-    <br>
-    <center><img src="https://scontent.fvix1-1.fna.fbcdn.net/v/t1.0-9/15253618_612267995648616_5934497721111599585_n.jpg?oh=6d313dcf0d536733e0ab9caf8e230309&oe=596BA086" width="355" height="450"></center>
-    <br>
-    <br>
-    <p><b>Nome:</b> Lucas Vinício Alves Almeida</p>
-    <p><b>Idade:</b> 14</p>
-    <p><b>Nascido em:</b> Lisboa-Portugal<img src="http://img.freeflagicons.com/thumb/fluttering_flag/portugal/portugal_640.png" width='33' height='23' alt=portugal title="Portugal"/></p>
+    <img style="padding:10px" src="https://scontent.fvix1-1.fna.fbcdn.net/v/t1.0-9/15253618_612267995648616_5934497721111599585_n.jpg?oh=6d313dcf0d536733e0ab9caf8e230309&oe=596BA086" width="200" height="250">
+    <table>
+    <tr>
+     <th><b>Nome:</b></th>
+     <th>Lucas Vinício</th>
+    </tr>
+    <tr>
+     <th><b>Idade:</b></th>
+     <th>14</th>
+    </tr>
+    </table>
     <p><b>Redes sociais:</b></p>
-        <a href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593" target="_blank"><img src="http://www.clickgratis.com.br/fotos-imagens/facebook/aHR0cDovL3d3dy5jbGlja2dyYXRpcy5jb20uYnIvZm90b3MtaW1hZ2Vucy9mYWNlYm9vay9hSFIwY0RvdkwyTmxiblJsY214NWJtVXVZMjl0TDNkd0xXTnZiblJsYm5RdmRYQnNiMkZrY3k4eU1ERTJMekEzTDJ4dloyOHRabUZqWldKdmIyc3VjRzVuLmpwZw==.jpg" width='54' height='54' alt=facebook title="Facebook"/></a>
+        <a style="padding:10px" href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593" target="_blank"><img src="http://www.clickgratis.com.br/fotos-imagens/facebook/aHR0cDovL3d3dy5jbGlja2dyYXRpcy5jb20uYnIvZm90b3MtaW1hZ2Vucy9mYWNlYm9vay9hSFIwY0RvdkwyTmxiblJsY214NWJtVXVZMjl0TDNkd0xXTnZiblJsYm5RdmRYQnNiMkZrY3k4eU1ERTJMekEzTDJ4dloyOHRabUZqWldKdmIyc3VjRzVuLmpwZw==.jpg" width='54' height='54' alt=facebook title="Facebook"/></a>
         <a href="https://www.instagram.com/lucas_portugal0906/?hl=pt-br" target="_blank"><img src="https://lh3.googleusercontent.com/aYbdIM1abwyVSUZLDKoE0CDZGRhlkpsaPOg9tNnBktUQYsXflwknnOn2Ge1Yr7rImGk=w300" width='50' height='48' alt=instagram title="Instagram"/></a>
     <br>
     <br>
     <marquee style="font-family: helvetica;" slide direction="left"><span style="color:#A52A2A"><i>"Tentar sempre, conseguir às vezes, desistir jamais" (Lucas Vinício)</i></span></marquee> 
     <br>  
     <br>
-    <center><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/PT2_F-1esPk?showinfo=0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div></center>
+    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/gT-JzR0qn3o" frameborder="0" allowfullscreen></iframe></center>
        <br>
        <br>
     <h1><b>Informações Pessoais</b></h1>
@@ -65,5 +76,6 @@
    <br>
    <br>   
    <br>
+   </article>
   </body>
 </html>
