--- a/index.html
+++ b/index.html
@@ -2,17 +2,48 @@
 <html>
   <head>
     <link href='http://icon-icons.com/icons2/67/PNG/512/football_13302.png' rel='icon' type='image/x-icon'/>
-    <title>Lucas Vinício</title>
+    <title>Lucas Vinício :D</title>
     <style>
+      header, footer {
+        padding: 1em;
+        background-color:#600000;
+        text-align: center;
+        text-shadow: -2px 2px 3px #000000;
+      }
+      nav {
+        float:left;
+        max-width: 160px;
+        margin: 0%;
+        padding: 2.5em
+      }
+      nav ul {
+        list-style-type: none;
+        padding: 1;
+        font-size: 18px;
+        font-family:"helvetica";
+        color:#A52A2A;
+        text-shadow: 0px 1px px #000000; 
+   }
+      article {
+        margin-left: 170px;
+        border-left: 1px solid gray;
+        padding: 1em;
+        overflow: hidden;
+      }
       h1 {
-        font-family:"verdana";
-        color:#800000;
-        padding:10px;
+         font-family:"verdana";
+         color:#800000;
+         padding:10px;
+      }
+      h2 {
+         font-family:"helvetica";
+         color:#800000;
+         padding:10px;
       }
       h3 {
         font-family:"helvetica";
         color:#A52A2A;
-        text-align:;
+        padding:10px;
       }
       p {
         font-family:"helvetica";
@@ -21,22 +52,28 @@
         padding: 10px;
       }
       body {
-        border: 5px solid #600000;
+        border: 13px solid #600000;
       }
-      header {
-        background-color:#600000;
-        text-align:center;
-        padding: 1cm;
-        font-family:"helvetica";
-        }
+     
     </style>
   </head>
   <body background="http://www.lucaslenci.com/imagens_upload/3FUNDO_site.jpg">
   <header><h1 style="color:#FFFFFF">Meu Site</h1></header>
-  <article>
+  <nav>
+  <br>
+  <br>
+  <br>
+   <ul>
+    <li>Sobre mim</li>
+    <li>Habilidades</li>
+    <li>Blog</li>
+    <li>Portifólio</li>
+    <li>Jogos</li>
+   </ul>
+  </nav>
     <br>
-    <h1><b>Dados Gerais</b></h1>
-    <img style="padding:10px" src="https://scontent.fvix1-1.fna.fbcdn.net/v/t1.0-9/15253618_612267995648616_5934497721111599585_n.jpg?oh=6d313dcf0d536733e0ab9caf8e230309&oe=596BA086" width="200" height="250">
+    <h2><b>Sobre mim</b></h2>
+    <img style="padding:10px" src="https://scontent.fvix1-1.fna.fbcdn.net/v/t1.0-9/15253618_612267995648616_5934497721111599585_n.jpg?oh=6d313dcf0d536733e0ab9caf8e230309&oe=596BA086" width="200" height="300">
     <table>
     <tr>
      <th><b>Nome:</b></th>
@@ -50,20 +87,16 @@
     <p><b>Redes sociais:</b></p>
         <a style="padding:10px" href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593" target="_blank"><img src="http://www.clickgratis.com.br/fotos-imagens/facebook/aHR0cDovL3d3dy5jbGlja2dyYXRpcy5jb20uYnIvZm90b3MtaW1hZ2Vucy9mYWNlYm9vay9hSFIwY0RvdkwyTmxiblJsY214NWJtVXVZMjl0TDNkd0xXTnZiblJsYm5RdmRYQnNiMkZrY3k4eU1ERTJMekEzTDJ4dloyOHRabUZqWldKdmIyc3VjRzVuLmpwZw==.jpg" width='54' height='54' alt=facebook title="Facebook"/></a>
         <a href="https://www.instagram.com/lucas_portugal0906/?hl=pt-br" target="_blank"><img src="https://lh3.googleusercontent.com/aYbdIM1abwyVSUZLDKoE0CDZGRhlkpsaPOg9tNnBktUQYsXflwknnOn2Ge1Yr7rImGk=w300" width='50' height='48' alt=instagram title="Instagram"/></a>
-    <br>
-    <br>
-    <marquee style="font-family: helvetica;" slide direction="left"><span style="color:#A52A2A"><i>"Tentar sempre, conseguir às vezes, desistir jamais" (Lucas Vinício)</i></span></marquee> 
-    <br>  
-    <br>
+        <br>
+        <br>
     <center><iframe width="560" height="315" src="https://www.youtube.com/embed/gT-JzR0qn3o" frameborder="0" allowfullscreen></iframe></center>
        <br>
        <br>
     <h1><b>Informações Pessoais</b></h1>
-    <br>
     <h3><b>Hobbies:</b></h3>
       <ul style="color:#A52A2A; font-family:helvetica">
         <li>Tocar violino</li>
-        <li>Jogar futebol e outros esportes <img src="https://img.clipartfest.com/7a21157a9cf2029ad48a387e7df8ac9a_free-glossy-soccer-ball-clip-clipart-bola-de-futebol_640-628.png" width='20' height='20' title="Futebol"/></li>
+        <li>Jogar futebol e outros esportes</li>
         <li>Assistir séries e filmes</li>
         <li>Viajar</li>
       </ul>
@@ -76,6 +109,5 @@
    <br>
    <br>   
    <br>
-   </article>
   </body>
 </html>
