--- a/index.html
+++ b/index.html
@@ -111,3 +111,153 @@
    <br>
   </body>
 </html>
+<!DOCTYPE html>
+<html>
+<head>
+ <link href='http://icon-icons.com/icons2/67/PNG/512/football_13302.png' rel='icon' type='image/x-icon'/>
+ <title>Lucas Vinício :D</title>
+ <style>
+  div.container {
+    width: 100%;
+}
+  body {
+    border: 3px solid #600000;
+}
+  header, footer {
+    padding: 1em;
+    color:white;
+    background-color:#600000;
+    clear: left;
+    text-align: center;
+    text-shadow: -2px 2px 3px #000000;
+}
+  nav {
+    float: left;
+    max-width: 16-px;
+    margin: 0;
+    padding:1em;
+}
+  nav ul {
+    list-style-type: none;
+    padding: 0;
+    color:;
+    text-shadow: 0px 1px px #000000; 
+    font-size: 18px;
+}
+   
+  nav ul a {
+    text-decoration: none;
+}
+
+  article {
+    margin-left: 140px;
+    border-left: 1px solid black;
+    padding: 1em;
+    overflow: hidden;
+}
+  a:link, a:visited {
+	text-decoration: none;
+    color: black;
+}
+  a:hover {
+	text-decoration: underline; 
+	color:#A52A2A;
+}
+  a:active {
+	text-decoration: none
+}
+  h2 {
+    font-family:"monospace";
+    color:#700000;
+    text-align:left;
+    font-size:30px;
+}
+  table {
+    border-collapse: collapse;
+    width: 60%;
+}
+  table, td, th {
+    border: 2px solid black;
+    color:#600000;
+    padding: 13px;
+}
+  th {
+    height: 250px;
+}   
+  tr:nth-child(even){background-color: #f2f2f2}
+  img {
+    float: left;
+}
+  p {
+    color:#700000;
+    font-family:"helvetica";
+}    
+</style>
+</head>
+
+<body background="http://www.lucaslenci.com/imagens_upload/3FUNDO_site.jpg">
+
+<div class="container">
+
+<header>
+   <h1>Lucas Vinício</h1>
+</header>
+  
+<nav>
+<br>
+  <ul>
+    <li><a href="#">Sobre mim</a></li>
+    <br>
+    <li><a href="#">habilidades</a></li>
+    <br>
+    <li><a href="#">Blog</a></li>
+    <br>
+    <li><a href="#">Portifolio</a></li>
+    <br>
+    <li><a href="#">Jogos</a></li>
+    <br>
+    <li><a href="#">Contatos</a></li>
+  </ul>
+</nav>
+
+<article>
+  <h2>Sobre mim</h2>
+   <img style="padding:10px" src="https://scontent.fvix1-1.fna.fbcdn.net/v/t1.0-9/15253618_612267995648616_5934497721111599585_n.jpg?oh=6d313dcf0d536733e0ab9caf8e230309&oe=596BA086" width="200" height="300">
+   <br>
+   <table>
+  <tr>
+    <td><b>Nome</b></td>
+    <td>Lucas Vinício Alves Almeida</td>
+  </tr>
+  <tr>
+    <td><b>Cidade</b></td>
+    <td>Serra</td>
+  </tr>
+  <tr>
+    <td><b>Natural de</b></td>
+    <td>Lisboa-Portugal</td>
+  </tr>
+  <tr>
+    <td><b>Idade</b></td>
+    <td>14 anos</td>
+  </tr>
+   </table>
+   <br>
+   <br>
+   <a href="https://www.facebook.com/lucas.vinicio.393?lst=100005962632254%3A100005962632254%3A1487964593" target="_blank"><img src="http://www.clickgratis.com.br/fotos-imagens/facebook/aHR0cDovL3d3dy5jbGlja2dyYXRpcy5jb20uYnIvZm90b3MtaW1hZ2Vucy9mYWNlYm9vay9hSFIwY0RvdkwyTmxiblJsY214NWJtVXVZMjl0TDNkd0xXTnZiblJsYm5RdmRYQnNiMkZrY3k4eU1ERTJMekEzTDJ4dloyOHRabUZqWldKdmIyc3VjRzVuLmpwZw==.jpg" width='54' height='54' alt=facebook title="Facebook"/></a>
+   <a href="https://www.instagram.com/lucas_portugal0906/?hl=pt-br" target="_blank"><img src="https://lh3.googleusercontent.com/aYbdIM1abwyVSUZLDKoE0CDZGRhlkpsaPOg9tNnBktUQYsXflwknnOn2Ge1Yr7rImGk=w300" width='50' height='48' alt=instagram title="Instagram"/></a>
+   <br>
+   <br>
+   <br>
+   <br>
+  <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+</article>
+
+<footer>Copyright &copy; W3Schools.com</footer>
+
+</div>
+
+</body>
+</html>
+
