--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div class="container">
 
 <header>
-   <h1>Lucas Vinício<br>"Meu Site"</h1>
+   <h1>Meu Site</h1>
 </header>
   
 <nav>
@@ -101,7 +101,7 @@
     <br>
     <li><a href="#">Portifolio</a></li>
     <br>
-    <li><a href="#">Jogos</a></li>
+    <li><a href="#">Projetos no scratch</a></li>
     <br>
     <li><a href="#">Contatos</a></li>
   </ul>
@@ -165,7 +165,7 @@
   <br>
   <br>
 </article>
-<footer>Create by Lucas Vinício</footer>
+<footer>Created by Lucas Vinício</footer>
 </div>
 </body>
 </html>
