--- a/habilidades.html
+++ b/habilidades.html
@@ -106,3 +106,6 @@
     <li><a href="#">Contatos</a></li>
   </ul>
 </nav>
+<article>
+	<h2 style="text-decoration: underline">Sobre mim</h2>
+	</article>
