--- a/habilidades.html
+++ b/habilidades.html
@@ -107,5 +107,31 @@
   </ul>
 </nav>
 <article>
-	<h2 style="text-decoration: underline">Sobre mim</h2>
-	</article>
+	<h2 style="text-decoration: underline">Habilidades</h2>
+<br>	
+<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+</article>
