--- a/habilidades.html
+++ b/habilidades.html
@@ -95,7 +95,7 @@
   <ul>
     <li><a href="#">Sobre mim</a></li>
     <br>
-    <li><a href="#">habilidades</a></li>
+    <li><a href="https://lucas996.github.io/habilidades">habilidades</a></li>
     <br>
     <li><a href="#">Blog</a></li>
     <br>
