--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <br>
 <br>
   <ul>
-    <li><a href="#">Sobre mim</a></li>
+    <li><a href="https://lucas996.github.io/">Sobre mim</a></li>
     <br>
     <li><a href="https://lucas996.github.io/habilidades">Habilidades</a></li>
     <br>
