--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <br>
     <li><a href="#">Blog</a></li>
     <br>
-    <li><a href="#">Portifolio</a></li>
+    <li><a href="https://lucas996.github.io/portifolio#">Portifolio</a></li>
     <br>
     <li><a href="#">Projetos no scratch</a></li>
     <br>
