--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <br>
     <li><a href="https://lucas996.github.io/portifolio#">Portifolio</a></li>
     <br>
-    <li><a href="#">Contatos</a></li>
+    <li><a href="https://lucas996.github.io/contatos#">Contatos</a></li>
   </ul>
 </nav>
 
