--- a/portifolio.html
+++ b/portifolio.html
@@ -97,13 +97,9 @@
     <br>
     <li><a href="https://lucas996.github.io/habilidades">Habilidades</a></li>
     <br>
-    <li><a href="#">Blog</a></li>
+    <li><a href="https://lucas996.github.io/portifolio">Portifolio</a></li>
     <br>
-    <li><a href="#">Portifolio</a></li>
-    <br>
-    <li><a href="#">Projetos no scratch</a></li>
-    <br>
-    <li><a href="#">Contatos</a></li>
+    <li><a href="https://lucas996.github.io/contatos">Contatos</a></li>
   </ul>
 </nav>
 
