--- a/sobremim.html
+++ b/sobremim.html
@@ -13,7 +13,7 @@
    	 <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+	<link rel="stylesheet" href="sobremim.css"/>
 </head>
 
 	<!-- 'Nav-bar' -->
@@ -35,7 +35,7 @@
 				<br>
 				<br>
 				<br>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Voltar</a>
+                <a href="#lusca.html" class="btn btn-primary btn-xl page-scroll">Voltar</a>
 				<br>
 				<br>
 				<br>
