--- a/sobremim.html
+++ b/sobremim.html
@@ -16,13 +16,13 @@
 	<link rel="stylesheet" href="sobremim.css"/>
 </head>
 
-	<!-- 'Nav-bar' -->
+		<!-- 'Nav-bar' -->
 	<body background="http://www.lucaslenci.com/imagens_upload/3FUNDO_site.jpg" data-target=".navbar" data-offset="50">
         
 		<nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                     <a class="navbar-brand" href="#">Home</a>
+                     <a class="navbar-brand" href="index.html">Home</a>
                 </div>
             </div>
         </nav>
@@ -35,7 +35,7 @@
 				<br>
 				<br>
 				<br>
-                <a href="#lusca.html" class="btn btn-primary btn-xl page-scroll">Voltar</a>
+                <a href="lusca.html" class="btn btn-primary btn-xl page-scroll">Voltar</a>
 				<br>
 				<br>
 				<br>
