--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h1 style="color:black" id="homeHeading">LUCAS VINÍCIO</h1>
                 <hr>
                 <p style="color:black">Este é o site de um garotinho que se chama Lucas, que estuda no Ifes, e que apesar de tudo, tem vida social :D</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">VENHA ME CONHEÇER</a>
+                <a href="https://lucas996.github.io/lusca" class="btn btn-primary btn-xl page-scroll">VENHA ME CONHEÇER</a>
 			</div>
         </div>
     </article>
