--- a/lusca.html
+++ b/lusca.html
@@ -25,7 +25,7 @@
                          <span class="icon-bar"></span>
                          <span class="icon-bar"></span>
                     </button>
-                     <a class="navbar-brand" href="#">Home</a>
+                     <a class="navbar-brand" href="https://lucas996.github.io/">Home</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav navbar-right">
@@ -83,7 +83,7 @@
             <br>
             <p style="color:#333333">Opa! Seja bem vindo ao meu site.<br> Eu, Lucas Vinício, estudo no Instituto Federal do Espírito Santo Campus Serra, onde eu faço ensino médio integrado com técnico em Informática para Internet. Mesmo gostando de tecnologias, nunca tive interesse por essa área kkk mas acabei <i>curtindo</i> no final das contas. Sou um carinha que gosta de viajar, conhecer lugares e descobrir coisas novas, gosto também de esportes como futebol, volêi, tênis de mesa, natação, etc... </p>
             <br>
-            <button class="btn pull" data-target="#sobremim.html">+ SOBRE  MIM</button>
+            <button class="btn pull" data-target="https://lucas996.github.io/sobremim">+ SOBRE  MIM</button>
             <br>
             <br>
             <br>
