--- a/sobremim.html
+++ b/sobremim.html
@@ -40,7 +40,7 @@
 				<br>
 				<br>
 				<br>
-				<img src="http://www.masterdigital.pt/images/manutencao-de-site-gif.gif" width="180" height="150">
+		<center><img class="img-responsive img-rounded" src="http://www.masterdigital.pt/images/manutencao-de-site-gif.gif" width="180" height="150"></center>
 			</div>
         </div>
     </article>
