--- a/sobremim.html
+++ b/sobremim.html
@@ -31,7 +31,7 @@
         <article>
         <div class="article-content text-center">
             <div class="article-content-inner text-center">
-                <h2 style="color:black">Página em Manutenção '-'</h2>
+		    <center><h2 style="color:black">Página em Manutenção '-'</h2></center>
 				<br>
 				<br>
 				<br>
