--- a/sobremim.html
+++ b/sobremim.html
@@ -35,7 +35,7 @@
 				<br>
 				<br>
 				<br>
-                <a href="https://lucas996.github.io/lusca" class="btn btn-primary btn-xl page-scroll">Voltar</a>
+                <center><a href="https://lucas996.github.io/lusca" class="btn btn-primary btn-xl page-scroll">Voltar</a></center>
 				<br>
 				<br>
 				<br>
