--- a/lusca.html
+++ b/lusca.html
@@ -233,7 +233,7 @@
                         <div class="modal-body">
                         <h3 style="color:black" class="text-center">Segurança Pública - ES</h3>
                         <hr>   
-                           <a href="https://essegurancapublica.github.io/"><center><img class="img-reponsive img-rounded" src="https://scontent.fvix1-1.fna.fbcdn.net/v/t1.0-9/19756533_242607746247329_723408432232338647_n.jpg?oh=4a732d9a1f55355ab4f57c81f2335c58&oe=59EBE8F0" width="206" height="320"></center></a>
+                           <a href="https://essegurancapublica.github.io/" target="_blank"><center><img class="img-reponsive img-rounded" src="https://scontent.fvix1-1.fna.fbcdn.net/v/t1.0-9/19756533_242607746247329_723408432232338647_n.jpg?oh=4a732d9a1f55355ab4f57c81f2335c58&oe=59EBE8F0" width="206" height="320"></center></a>
                         </div>
                     </div>
                 </div>
