--- a/lusca.html
+++ b/lusca.html
@@ -202,15 +202,15 @@
                         <div class="modal-body">
                         <h3 style="color:black" class="text-center">Top Paddle</h3>
                         <hr>
-      <center><iframe allowtransparency="true" width="400" height="300" src="//scratch.mit.edu/projects/embed/150268337/?autostart=false" frameborder="0" allowfullscreen></iframe></center>
+      <center><iframe class="iframe-responsive" allowtransparency="true" width="400" height="300" src="//scratch.mit.edu/projects/embed/150268337/?autostart=false" frameborder="0" allowfullscreen></iframe></center>
       <br>
       <h3 style="color:black" class="text-center">Pac-Man</h3>
                         <hr>
-      <center><iframe allowtransparency="true" width="400" height="300" src="//scratch.mit.edu/projects/embed/88947893/?autostart=false" frameborder="0" allowfullscreen></iframe></center>
+      <center><iframe class="iframe-responsive" allowtransparency="true" width="400" height="300" src="//scratch.mit.edu/projects/embed/88947893/?autostart=false" frameborder="0" allowfullscreen></iframe></center>
       <br>
       <h3 style="color:black" class="text-center">Fractal - Tapete de Sierpinski</h3>
                         <hr>
-            <center><iframe allowtransparency="true" width="400" height="300" src="//scratch.mit.edu/projects/embed/171288605/?autostart=false" frameborder="0" allowfullscreen></iframe></center>
+            <center><iframe class="iframe-responsive" allowtransparency="true" width="400" height="300" src="//scratch.mit.edu/projects/embed/171288605/?autostart=false" frameborder="0" allowfullscreen></iframe></center>
 
   
                         </div>
