--- a/lusca.html
+++ b/lusca.html
@@ -199,17 +199,18 @@
                         </div>
                         
                         <div class="modal-body">
+				
                         <h3 style="color:black" class="text-center">Top Paddle</h3>
                         <hr>
-      <center><iframe allowtransparency="true" width="400" height="300" src="//scratch.mit.edu/projects/embed/150268337/?autostart=false" frameborder="0" allowfullscreen></iframe></center>
+      <a href="https://scratch.mit.edu/projects/embed/150268337/?autostart=true" target="_blank"><center><img class="img-reponsive img-rounded" src="" width="400" height="300"></center></a>
       <br>
       <h3 style="color:black" class="text-center">Pac-Man</h3>
                         <hr>
-      <center><iframe allowtransparency="true" width="400" height="300" src="//scratch.mit.edu/projects/embed/88947893/?autostart=false" frameborder="0" allowfullscreen></iframe></center>
+      <a href="https://scratch.mit.edu/projects/embed/88947893/?autostart=false" target="_blank"><center><img class="img-reponsive img-rounded" src="" width="400" height="300"></center></a>
       <br>
       <h3 style="color:black" class="text-center">Fractal - Tapete de Sierpinski</h3>
                         <hr>
-            <center><iframe allowtransparency="true" width="400" height="300" src="//scratch.mit.edu/projects/embed/171288605/?autostart=false" frameborder="0" allowfullscreen></iframe></center>
+      <a href="https://scratch.mit.edu/projects/embed/171288605/?autostart=true" target="_blank"><center><img class="img-reponsive img-rounded" src="" width="400" height="300"></center></a>
 
   
                         </div>
