--- a/lusca.html
+++ b/lusca.html
@@ -202,15 +202,15 @@
 				
                         <h3 style="color:black" class="text-center">Top Paddle</h3>
                         <hr>
-      <a href="https://scratch.mit.edu/projects/embed/150268337/?autostart=true" target="_blank"><center><img class="img-reponsive img-rounded" src="" width="400" height="300"></center></a>
+      <a href="https://scratch.mit.edu/projects/embed/150268337/?autostart=true" target="_blank"><center><img class="img-reponsive img-rounded" src="paddle.png" width="400" height="300"></center></a>
       <br>
       <h3 style="color:black" class="text-center">Pac-Man</h3>
                         <hr>
-      <a href="https://scratch.mit.edu/projects/embed/88947893/?autostart=false" target="_blank"><center><img class="img-reponsive img-rounded" src="" width="400" height="300"></center></a>
+      <a href="https://scratch.mit.edu/projects/embed/88947893/?autostart=false" target="_blank"><center><img class="img-reponsive img-rounded" src="pacman.png" width="400" height="300"></center></a>
       <br>
       <h3 style="color:black" class="text-center">Fractal - Tapete de Sierpinski</h3>
                         <hr>
-      <a href="https://scratch.mit.edu/projects/embed/171288605/?autostart=true" target="_blank"><center><img class="img-reponsive img-rounded" src="" width="400" height="300"></center></a>
+      <a href="https://scratch.mit.edu/projects/embed/171288605/?autostart=true" target="_blank"><center><img class="img-reponsive img-rounded" src="fractal.png" width="400" height="300"></center></a>
 
   
                         </div>
