--- a/lusca.html
+++ b/lusca.html
@@ -198,7 +198,7 @@
                              <h4>Scratch</h4>
                         </div>
                         
-                        <div class="modal-body">
+                        <div class="modal-body text-center">
 				
                         <h3 style="color:black" class="text-center">Top Paddle</h3>
                         <hr>
