--- a/lusca.html
+++ b/lusca.html
@@ -202,15 +202,15 @@
 				
                         <h3 style="color:black" class="text-center">Top Paddle</h3>
                         <hr>
-      <a href="https://scratch.mit.edu/projects/embed/150268337/?autostart=true" target="_blank"><center><img class="img-reponsive img-rounded" src="paddle.png" width="400" height="300"></center></a>
+      <a href="https://scratch.mit.edu/projects/embed/150268337/?autostart=true" target="_blank"><center><img class="img-reponsive img-rounded" src="http://2.bp.blogspot.com/-2DdFLZil01s/VC-JEIswmqI/AAAAAAAABsg/J0CBR1s75no/s1600/Lazarus-Pong-Game-2.gif" width="400" height="300"></center></a>
       <br>
       <h3 style="color:black" class="text-center">Pac-Man</h3>
                         <hr>
-      <a href="https://scratch.mit.edu/projects/embed/88947893/?autostart=false" target="_blank"><center><img class="img-reponsive img-rounded" src="pacman.png" width="400" height="300"></center></a>
+      <a href="https://scratch.mit.edu/projects/embed/88947893/?autostart=false" target="_blank"><center><img class="img-reponsive img-rounded" src="http://s2.glbimg.com/ViQfz0pIv67Gf2Lah3bkIfppa2k=/850x446/s.glbimg.com/po/tt/f/original/2013/05/24/pac-man-classic.jpg" width="400" height="300"></center></a>
       <br>
       <h3 style="color:black" class="text-center">Fractal - Tapete de Sierpinski</h3>
                         <hr>
-      <a href="https://scratch.mit.edu/projects/embed/171288605/?autostart=true" target="_blank"><center><img class="img-reponsive img-rounded" src="fractal.png" width="400" height="300"></center></a>
+      <a href="https://scratch.mit.edu/projects/embed/171288605/?autostart=true" target="_blank"><center><img class="img-reponsive img-rounded" src="https://s-media-cache-ak0.pinimg.com/originals/f0/7c/8f/f07c8f055bb4f84276a7ae1067008c57.jpg" width="400" height="300"></center></a>
 
   
                         </div>
