--- a/lusca.html
+++ b/lusca.html
@@ -196,6 +196,7 @@
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">×</button>
                              <h4>Scratch</h4>
+				<p><b>Só é reproduzido no pc</b></p>
                         </div>
                         
                         <div class="modal-body text-center">
