--- a/lusca.html
+++ b/lusca.html
@@ -196,7 +196,7 @@
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">×</button>
                              <h4>Scratch</h4>
-				<p><b>Só é reproduzido no pc</b></p>
+				<center><h5><b>Só é reproduzido no PC</b></h5><center>
                         </div>
                         
                         <div class="modal-body text-center">
