--- a/sobremim.html
+++ b/sobremim.html
@@ -1,5 +1,51 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Sobre mim</title>
+<title>Lusca :D</title>
+  <link href='http://icon-icons.com/icons2/300/PNG/256/person-icon_31846.png' rel='icon' type='image/x-icon'/>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="sobremim.css"/>
 </head>
+
+	<!-- 'Nav-bar' -->
+	<body background="http://www.lucaslenci.com/imagens_upload/3FUNDO_site.jpg" data-target=".navbar" data-offset="50">
+        
+		<nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                     <a class="navbar-brand" href="#">Home</a>
+                </div>
+            </div>
+        </nav>
+		
+		<!-- Container (sobre mim) -->
+        <article>
+        <div class="article-content text-center">
+            <div class="article-content-inner text-center">
+                <h2 style="color:black">Página em Manutenção '-'</h2>
+				<br>
+				<br>
+				<br>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">Voltar</a>
+				<br>
+				<br>
+				<br>
+				<br>
+				<img src="http://www.masterdigital.pt/images/manutencao-de-site-gif.gif" width="180" height="150">
+			</div>
+        </div>
+    </article>
+	<div class="text-center">
+    <footer>© 2017 Lucas Vinício. Todos Direitos Reservados.</footer>
+	</div>
+</body>
 </html>
