--- a/sobremim.html
+++ b/sobremim.html
@@ -22,7 +22,7 @@
 		<nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                     <a class="navbar-brand" href="#">Home</a>
+                     <a class="navbar-brand" href="https://lucas996.github.io/">Home</a>
                 </div>
             </div>
         </nav>
@@ -35,7 +35,7 @@
 				<br>
 				<br>
 				<br>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Voltar</a>
+                <a href="https://lucas996.github.io/lusca" class="btn btn-primary btn-xl page-scroll">Voltar</a>
 				<br>
 				<br>
 				<br>
