--- a/lusca.html
+++ b/lusca.html
@@ -175,7 +175,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="thumbnail">
-                            <img src="https://www.itony.net/content/images/2017/07/python-note.png" alt="Python" width="400" height="300"><br>
+                            <img src="https://www.python.org/static/community_logos/python-logo-inkscape.svg" alt="Python" width="400" height="300"><br>
                             <p><strong>Python</strong>
                             </p>
                             <br>
